--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-playwright": "^0.15.3",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~14.0.3",
     "nx": "18.2.4",
     "prettier": "^2.6.2",
