--- a/apps/example-nx-e2e/tsconfig.e2e.json
+++ b/apps/example-nx-e2e/tsconfig.e2e.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "target": "es2016",
-    "types": ["jest", "node"]
+    "types": []
   },
-  "include": ["jest.config.ts", "src/**/*.spec.ts", "src/**/*.d.ts"]
+  "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "playwright.config.ts"]
 }
